--- a/projectie/src/main/webapp/WEB-INF/register.html
+++ b/projectie/src/main/webapp/WEB-INF/register.html
@@ -35,13 +35,13 @@ color: #DAF7A6 !important;
         <div class ="col-lg-3"></div>
         <div class ="col-lg-5">
     <div class="form-group">
-       <input class ="form-control" name =" " type = "text" placeholder ="insert username">
+       <input class ="form-control" name ="username" type = "text" placeholder ="insert username">
     </div></div>
     <div class ="col-lg-3"></div></div>
     <div class ="row">
         <div class ="col-lg-5"></div>
         <div class =col-lg-2>
-    <button type="submit" class="btn btn-light">Submit</button>
+    <button type="submit" class="btn btn-light active btn-sm mt-3" role ="button" aria-pressed="true">Submit</button>
         </div>
         <div class =col-lg-5></div></div>
 </form></div>
