--- a/projectie/src/main/webapp/WEB-INF/login.html
+++ b/projectie/src/main/webapp/WEB-INF/login.html
@@ -23,7 +23,7 @@ color: #DAF7A6 !important;
     <div class="row">
     </div>
 
-    <form method = "POST" action ="/servlet3">
+    <form method = "POST" action ="/Welcome">
         <div class="form-group row mt-5">
             <div class ="col-lg-3"></div>
             <div class ="col-lg-6">
