--- a/projectie/src/main/webapp/WEB-INF/header.html
+++ b/projectie/src/main/webapp/WEB-INF/header.html
@@ -20,10 +20,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                </a>
+           <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">Groups</a>
                     <a class="dropdown-item" href="#">Ideas</a>
