--- a/projectie/src/main/webapp/WEB-INF/login.html
+++ b/projectie/src/main/webapp/WEB-INF/login.html
@@ -34,6 +34,7 @@ color: #DAF7A6 !important;
             <div class ="col-lg-3"></div>
             </div>
 
+
         <div class="form-group row ">
             <div class ="col-lg-3"></div>
             <div class ="col-lg-6">
@@ -42,7 +43,13 @@ color: #DAF7A6 !important;
             </div>
             <div class ="col-lg-3"></div>
             </div>
+            <div class ="col-lg-3"></div>
 
+            <div class="form-group">
+            <input class ="form-control col-lg-5" name ="username" type = "text" placeholder ="insert username">
+            </div>
+
+            <div class = col-lg-3></div>
                 <div class ="row">
                     <div class = "col-lg-5"></div>
                     <div class = "col-lg-1">
